hphp/hack/test/typecheck/classname/new_trait.php
<?hh // partial

trait Foo {}

function f(classname<Foo> $x) {
  new $x();
}
